# solvia

./: .cicd-test  .dockerignore  .env.example  .env.production  .gitignore  ADD_DEPLOY_KEYS_NOW.md  Business_Analysis_Select_Options.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Caddyfile.multi  Caddyfile.production  DASHBOARD_CACHE_GUIDE.md  DASHBOARD_GUIDE.md  Dockerfile  FINAL_SSH_FIX.md  GITHUB_SECRET_SETUP.md  GOOGLE_OAUTH_SETUP.md  MESSAGE_TO_NADRA.md  MULTI_REPO_SETUP.md  Makefile  QUICK_START.md  README.md  REFACTORING_NOTES.md  ROUTE_AUDIT_COMPLETE.md  SETUP_GITHUB_KEYS.md  SETUP_SERVER_GIT.sh  SSH_KEY_BASE64.txt  SSH_KEY_INSTRUCTIONS.md  SSH_KEY_UPDATE.txt  TROUBLESHOOTING_AIRTABLE.md  VERIFY_FRESH_DATA.md  _how_to_run.txt  alpha_1_data_pipeline.md  alpha_2_audit.md  alpha_3_agent.md  caddy_logs.txt  cicd-test.md  debug_dashboard.js  debug_organized_tables.py  (+34 more)
.claude/: settings.json
api/: .air.toml  BENCHMARK_COMPARISON_REPORT.md  Dockerfile  go.mod  go.sum  start.sh
app/: __init__.py  config.py  database.py  main.py
core/: __init__.py  analysis_processor.py  auth_setup.py  data_collector.py  data_mapper.py  google_sheets_integration.py  main.py  recommendation_aggregator.py  test_recommendation_aggregator.py  test_report_preview.py
docs/: DASHBOARD_GUIDE.md  GOLANG_MIGRATION_PROGRESS.md  GOOGLE_SHEETS_REPORTS_GUIDE.md  OPTIMIZATION_SUMMARY.md  ORIGINAL_CODE_ANALYSIS.md  ORIGINAL_CODE_INVENTORY.md  PDF_ICON_PATH_FIX_2025-11-18.md  PROJECT_STRUCTURE.md  README.md  RECOMMENDATION_AGGREGATOR_GUIDE.md  SOLVIA_DESIGN_SYSTEM.md  ULTRATHINK_AUDIT_FIX_2025-10-17.md  (+4 more)
(+281 files in other folders)
