[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solvia"
version = "0.1.0"
description = "Solvia Google OAuth Authentication"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
# This will automatically find the 'app' and 'core' packages
exclude = ["tests*"] 